  removed and replaced by
  :class:`rpy2.rinterface.SexpVectorWithNumpyInterface`.

- With Python < 3.8 the module :mod:`typing_extensions` is now a requirement.

- Initialization and update steps for
  :class:`rpy2.robjects.conversion.NameClassMap` were update to ensure
  type hints are correct. This probably solved cryptic bugs with conversion
  system.

Bugs fixed
----------

- Clear R warning about partial argument name matching (issue #821).

- Setting slice of a StrSexpVector where some of the elements are not strings
  could fail.

- Assigning items to an R array of strings using a slice of more than one
  element was likely to fail.

- The rinterface-level conversion of Python integers to R integer is now
  checking that integer are not larger than what R can handle.
  

Release 3.4.6
=============

- Added a class and an alias to map ggplot2's `element_line` (issue #822).


Release 3.4.5
=============

Changes
-------

- The deprecation warning when using :func:`rpy2.robjects.lib.grid.activate`
  was missing (indirectly revealed through issue #804).

- The named argument `LINPACK` in :meth:`rpy2.robjects.vectors.Matrix.svd`
  is no longer present in R.

Bugs fixed
----------

- SIGPIPE sent to a process running Python+rpy2 could result in a segfault.
  This was caused by an incorrect setting of R signal handlers (issue #809).


Release 3.4.4
==============

Changes
-------

- `RRuntimeError` exceptions raised while evaluating R code
  an R magic (ipython/jupyter) are now propagated (issue #792).
  


Release 3.4.3
=============

New features
------------

- :mod:`rpy2.robjects.lib.ggplot2` maps more functions in the
  R package (issue #767)

- Utility function :func:`rpy2.robjects.lib.ggplot2.dict2rvec`
  to convert a Python `Dict[str, str]` into an R named vector
  of strings.

Bugs fixed
----------

- Calling mod:`rpy2.situation` to report on the environment no longer
  stops with an uncaught exception when no R home can be determined
  (issue #774)
